--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(name='viewport', content='width=device-width,initial-scale=1.0')
     title= title
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/all.min.css')
@@ -10,21 +10,19 @@ html
     nav.navbar.fixed-top.navbar-expand-md.navbar-light
       .container
         a.navbar-brand(href='/') Loc8r
-        button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarMain')
-          span.navbar-toggler-icon
-        #navbarMain.navbar-collapse.collapse
-          ul.navbar-nav.mr-auto
-            li.nav-item
-              a.nav-link(href='/about/') About
-
-    .container.content
-      block content
-
-      footer
-        .row
-          .col-12
-            small &copy; Getting Mean - Simon Holmes/Clive Harber 2018
-
-    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js', integrity='sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49', crossorigin='anonymous')
-    script(src='/javascripts/bootstrap.min.js')
+          button.navbar-toggler(type='button', data-toggle='collapse',
+            data-target='#navbarMain')
+            span.navbar-toggler-icon
+        #navbarMain.navbar-collapse.collapse 
+          ul.navbar-nav.mr-auto 
+            li.nav-item 
+              a.nav-link(href='/about/') About 
+  .container.content
+    block content
+    footer 
+      .row 
+        .col-12 
+          small &copy; Getting MEAN - Simon Holmes/Clive Harber 2018
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js" integrity="sha512-M+qMI1PHRcYcOpJzeJlaWbVVx2JJyPIwZas8or7dc97LZOokjvbpfRxymhVtlJLyjiF3wGyr0FJOA4DLONLVLw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha512-ldc1sPu1FZ8smgkgp+HwnYyVb1eRn2wEmKrDg1JqPEb02+Ei4kNzDIQ0Uwh0AJVLQFjJoWwG+764x70zy5Tv4A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="/stylesheets/javascripts/bootstrap.min.js"></script>
