--- a/app_server/views/locations-list.pug
+++ b/app_server/views/locations-list.pug
@@ -1,27 +1,22 @@
-extends layout
-
-include _includes/sharedHTMLfunctions
-
+extends layout 
+include _includes\sharedHTMLfunctions
 block content
   .row.banner
     .col-12
       h1= pageHeader.title
-        small &nbsp;#{pageHeader.strapLine}
-
+        small &nbsp;#{pageHeader.strapline} 
   .row
-    .col-12.col-md-8
+    .col-12.col-md-8 
       each location in locations
         .card
           .card-block
             h4
-              a(href='/location')= location.name
+              a(href="/location")= location.name 
               +outputRating(location.rating)
               span.badge.badge-pill.badge-default.float-right= location.distance
             p.address= location.address
-            .facilities
+            .facilities 
               each facility in location.facilities
-                span.badge.badge-warning= facility
-
-
-    .col-12.col-md-4
+                span.badge.badge-warning= location.distance
+    .col-12.col-md-4 
       p.lead= sidebar
